# quake-level-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPEC.md  bsp.cpp  lighting.frag  lighting.fs  lighting.fs.glsl  lighting.vert  lighting.vs  lighting.vs.glsl  main.cpp  map.cpp  quad.fs  quad.vs  quake-level-viewer.cpp  raymath-extras.h
